# pyrandom123

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml
docs/: conf.py  index.md
include/pyrandom123/: randomutil.hpp  typeconversion.hpp
src/: main.cpp
src/pyrandom123/: __init__.py
tests/: test_compiled.py  test_package.py
